# Resume-Analysis

./: DataResume.ipynb  dataCleaning.ipynb  model.py  pyproject.toml  sampleSelection.py
.ipynb_checkpoints/: DataResume-checkpoint.ipynb  dataCleaning-checkpoint.ipynb
CV-Job-matching/: Finance Associate_Blenheim Chalcot.docx
